ImpressCMS ChangeLog

== Impresscms 1.1.1==

===2008-12-20 : 1.1.1 Final===

* Only version number changed

===2008-12-12 : 1.1.1 RC2===

'''Fixed'''
* #2354713: Security issue in SESSION id (Fixation), previous fix caused problems with some users being logged out sporadically. (vaughan)
* XSS vulnerability in blocksadmin.php $_GET['selmod'], potential (but not necessarily vulnerable) exploit in $_GET['editor']. (GiJoe/vaughan)

===2008-12-2 : 1.1.1 RC===

'''Fixed'''
* #2354713: Security issue in SESSION id (vaughan/malanciault)
* #2300634: Blocks Positions admin not totaly secured (real_therplima/trabis)

'''Improved'''
* If an email notification is sent on PM, the user's email will appear in the From header if he has activated "Allow other users to view my email address" (malanciaut)

== Impresscms 1.1==

===2008-10-31 : 1.1 Final===

'''Fixed'''
* Issues with content menu in RTL. (stranger)
* Issues with registration not completed with passwordmeter. (stranger)
* Issues with too easy captcha configs. (stranger)
* #2190687: When saving a block, if $options was a multi-levels array, StopXSS was failing to save array. StopXSS is now recursive and will all levels of $text parameter if it's an array (malanciault)
* #2192679: Leading space in cache/index.html (dave_l)
* Fixed issues with spambots. (Frederick/stranger)
* Fixed issues multiple time stamps. (Frederick/stranger)
* Fixed security issue in snoopy.php: http://secunia.com/Advisories/32361/ (thanks to Gijoe)
* Fixed issue on the pagination links of the image manager tinyMCE plugin.
* The WYSIWYG group permission per module was confused when trying to know if a user should have permission to use WYSIWYG when posting a comment in a module that had such permission (malanciault/real_therplima)
* Fixed a bug with RTL, if this is not implemented, we will have troubles while sending posts in some modules like newbb (stranger)

'''Added'''