@@ -17,6 +17,14 @@ if(!defined("XOOPS_FOOTER_INCLUDED"))
 {
 	define("XOOPS_FOOTER_INCLUDED",1);
 
+$_SESSION['ad_sess_regen'] = false;
+if(isset($_SESSION['sess_regen']) && $_SESSION['sess_regen'])
+{
+	$sess_handler->icms_sessionOpen(true);
+	$_SESSION['sess_regen'] = false;
+}
+else {$sess_handler->icms_sessionOpen();}
+
 	// ################# Preload Trigger beforeFooter ##############
 	$icmsPreloadHandler->triggerEvent('beforeFooter');
 
