@@ -68,12 +68,8 @@ class XoopsSessionHandler
 	* @var	bool
 	* @access	public
 	*/
-	var $enableRegenerateId = true;
+	var $enableRegenerateId = false;
     
-	var $salt_key = XOOPS_DB_SALT;
-
-	var $check_ip_blocks = 2;
-
 	/**
 	* Constructor
 	* @param object $db reference to the {@link XoopsDatabase} object
@@ -184,12 +180,15 @@ class XoopsSessionHandler
 	* @param   bool $delete_old_session
 	* @return  bool
 	**/
-	function icms_sessionRegenerateId($delete_old_session = false)
+	function icms_sessionRegenerateId($regenerate = false)
 	{
 		$old_session_id = session_id();
-		$success = session_regenerate_id($delete_old_session);
-		if($this->enableRegenerateId) {$this->destroy($old_session_id);}
-
+		if($regenerate)
+		{
+			$success = session_regenerate_id(true);
+//			$this->destroy($old_session_id);
+		}
+		else {$success = session_regenerate_id();}
 		// Force updating cookie for session cookie is not issued correctly in some IE versions or not automatically issued prior to PHP 4.3.3 for all browsers 
 		if($success) {$this->update_cookie();}
 		
@@ -215,34 +214,34 @@ class XoopsSessionHandler
 	}
 
 	// Call this when init session.
-	function icms_sessionOpen()
+	function icms_sessionOpen($regenerate = false)
 	{
 		$_SESSION['icms_fprint'] = $this->icms_sessionFingerprint();
-		$this->icms_sessionRegenerateId();
+		if($regenerate) {$this->icms_sessionRegenerateId(true);}
 	}
 	
 	// Call this to check session.
 	function icms_sessionCheck()
 	{
-		$this->icms_sessionRegenerateId();
+//		$this->icms_sessionRegenerateId();
 		return (isset($_SESSION['icms_fprint']) && $_SESSION['icms_fprint'] == $this->icms_sessionFingerprint());
 	}
 
-	// Internal function. Returns md5 from fingerprint.
+	// Internal function. Returns sha256 from fingerprint.
 	function icms_sessionFingerprint()
 	{
-		$fingerprint = $this->salt_key;
-		if($this->securityLevel >= 1) {$fingerprint .= $_SERVER['HTTP_USER_AGENT'];}
-		if($this->check_ip_blocks)
+		$securityLevel = $this->securityLevel;
+		$fingerprint = XOOPS_DB_SALT;
+		if($securityLevel >= 1) {$fingerprint .= $_SERVER['HTTP_USER_AGENT'];}
+		if($securityLevel >= 2)
 		{
-			$num_blocks = abs(intval($this->check_ip_blocks));
+			$num_blocks = abs(intval($securityLevel));
 			if($num_blocks > 4) {$num_blocks = 4;}
 			$blocks = explode('.', $_SERVER['REMOTE_ADDR']);
 			for($i = 0; $i < $num_blocks; $i++) {$fingerprint .= $blocks[$i].'.';}
 		}
-		return md5($fingerprint);
+		return hash('sha256',$fingerprint);
 	}
-
 
 }
 ?>
