@@ -4,7 +4,11 @@ ImpressCMS ChangeLog
 
 ===2008-12-20 : 1.1.1 Final===
 
-* Only version number changed
+'''Fixed'''
+#2424282: Notice: Undefined index: reg_i in file /admin.php line 41 (vaughan)
+
+'''Improved'''
+* #2354713: improving session regenerate method, as it wasn't working as it should. & causes conflict with formmail reported by Thomas. have changed the cookie name from PHPSESSID and renamed to custom session name or if not defined it uses 1st 10 chars from sitename. (vaughan)
 
 ===2008-12-12 : 1.1.1 RC2===
 
